# weatherflow-collector

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-docker.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: build-image.yaml  ci.yaml
grafana/dashboards/: dashboards.yaml
grafana/datasources/: influxdb-weatherflow.yaml  websocket-weatherflow-collector.yaml
src/: config.py  config_validator.py  event_manager.py  logger.py  station_metadata_manager.py  weatherflow-collector.py
src/collector/: rest_export.py  rest_forecasts.py  rest_import.py  rest_observations_device.py  rest_observations_station.py  rest_stats.py  udp.py  websocket.py
src/handlers/: __init__.py  current_conditions.py  handler.py  rest_forecasts.py  rest_import.py  rest_observations_device.py  rest_observations_station.py  rest_stats.py  system_metrics.py  udp.py  websocket.py
src/processor/: collector_data.py  export.py
src/provider/: websocket_server.py
src/storage/: file.py  influxdb.py  influxdb_delete.py
src/utils/: calculate_weather_metrics.py  utils.py
